<resources>
    <string name="app_name">IUBH Todo App</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Einloggen oder Registrieren</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">The Email-Adresse ist nicht gültig.</string>
    <string name="error_invalid_password">Das Passwort ist zu kurz.</string>
    <string name="error_incorrect_password">Das Paswort ist nicht korrekt.</string>
    <string name="error_not_matching_password">Das Passwort ist für diesen Benutzer ungültig.</string>
    <string name="error_field_required">Dieses Feld ist verpflichtend anzugeben.</string>
    <string name="permission_rationale">Die Berechtigung zum Auslesen deiner Kontakte ist notwendig, um diese Aktion durchführen zu können.</string>
    <string name="user_not_found_exception">Benutzer existiert nicht.</string>
    <string name="dialog_create_new_user">Der Benutzer existiert nicht, möchtest du den Benutzer erstellen?</string>
    <string name="dialog_user_created">Benutzer wurde erstellt, du kannst dich nun einloggen.</string>
    <string name="dialog_user_could_not_be_created">Der Benutzer konnte nicht erstellt werden, bitte probiere es später noch einmal.</string>
    <string name="dialog_user_not_created">Der Benutzer wurde nicht erstellt.</string>
    <string name="dialog_yes">Ja</string>
    <string name="dialog_no">Nein</string>
    <string name="login_successful">Login erfolgreich!</string>
    <string name="title_activity_list_todos_activitiy">ListTodosActivitiy</string>

    <string name="status_open">offen</string>
    <string name="status_in_progress">in Arbeit</string>
    <string name="status_done">abgeschlossen</string>

    <string name="newTodo_Button">neues Todo</string>
    <string name="sort_Todos">sortieren nach..</string>
    <string name="your_todos">Deine Todos</string>
    <string name="title_activity_new_todo_activity">new_todo_activity</string>
    <string name="new_todo_title">Erstelle ein neues Todo</string>
    <string name="todo_title">Titel des Todo</string>
    <string name="todo_desc">Beschreibung</string>
    <string name="todo_dueDate">Erledigen bis..</string>
    <string name="todo_isFavorite">Als Favorit markieren?</string>
    <string name="todo_linkToContact">Todo einem Kontakt zuweisen?</string>
    <string name="todo_linkToContactShort">Kontakt zuweisen...</string>
    <string name="todo_clickToShowContacts">Anklicken um Kontakte anzuzeigen...</string>
    <string name="todo_buttonCreate">Neues Todo erstellen</string>

    <string name="todo_title_short">Titel:</string>
    <string name="todo_desc_short">Beschreibung:</string>
    <string name="todo_status_short">Status:</string>
    <string name="todo_dueDate_short">Erledigen bis:</string>
    <string name="todo_fav_short">Favorit:</string>
    <string name="todo_linkedTo_short">Verknüpft mit:</string>
    <string name="todo_btnSaveChanges">Änderungen \nspeichern</string>
    <string name="todo_btnbackToOverview">Zurück zu\n Übersicht</string>

    <string name="pdf_head_Titel">Generiertes PDF für Todo</string>
    <string name="pdf_todo_Titel">Titel des Todo: </string>
    <string name="pdf_todo_Description_head">Beschreibung des Todo: </string>
    <string name="pdf_todo_dueDate_head">Erledigen bis: </string>
    <string name="pdf_linked_contact_head">Verknüpt mit Kontakt: </string>

    <string name="pdf_created">PDF erfolgreich erzeugt!</string>
    <string name="pdf_not_created">PDF konnte nicht erzeugt werden.</string>

    <string name="btn_next">nächste Seite</string>
    <string name="btn_prev">vorherige Seite</string>
    <string name="btn_cancel">Abbrechen</string>

    <string name="error_change_todo">Fehler beim Speichern der Änderungen!</string>
    <string name="ok_change_todo">Änderungen wurden erfolgreich gespeichert!</string>

    <string name="pdf_exists_add_to_mail">Es existiert ein PDF mit Details zu diesem Todo, wollen Sie dieses als Anhang in der Email mitsenden?</string>
    <string name="email_subject">Einladung zur Mitarbeit an einem Todo!</string>
    <string name="email_content_attachment">Details können dem Anhang entnommen werden!</string>
    <string name="fragment_all_todos_title">Alle Todos</string>
    <string name="fragment_today_title">Todos für heute</string>
    <string name="fragment_done_title">Abgeschlossene Todos</string>

    <string name="on_long_click_dialog_title">Wähle die gewünschte Aktion:</string>
    <string-array name="onLongClickDialogItems">
        <item>Todo Details anzeigen</item>
        <item>Todo löschen</item>
        <item>Todo abschließen</item>
    </string-array>

    <string-array name="spinnerDropdown">
        <item>Sortieren nach..</item>
        <item>Datum</item>
        <item>Favorit</item>
        <item>Status Offen</item>
        <item>Status in Arbeit</item>
    </string-array>

</resources>
